add thymeleaf, connect witch controllers, add Spring Validation...

--- a/LinkedOut/src/main/resources/templates/employee-details.html
+++ b/LinkedOut/src/main/resources/templates/employee-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>LinkedOut</title>
@@ -33,19 +33,19 @@
                     <h1>Employee Details</h1>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 bg-dark">
+                    <div th:if="${employee != null}" class="col-md-6 bg-dark">
                         <h2>Employee</h2>
-                        <h4>First Name: {firstName}</h4>
-                        <h4>Last Name: {lastName}</h4>
-                        <h4>Education Level: {educationLevel}</h4>
-                        <h4>Job title: {jobTitle}</h4>
-                        <h4>Birthdate: {birthDate}</h4>
-                        <h4>Salary: {salary in format 10$}</h4>
-                        <h4>Company: {company name}</h4>
-                        <div class="align-bottom">
-						<a class="btn btn-danger align-bottom"
-                                                     href="/">Delete employee</a>
-                        </div>
+                        <h4 th:text="'First Name: ' + ${employee.firstName} ">Employee first name</h4>
+                        <h4 th:text="'Last Name: ' + ${employee.lastName} ">Employee last name</h4>
+                        <h4 th:text="'Education Level: ' + ${employee.educationLevel} ">Employee "Education Level"</h4>
+                        <h4 th:text="'Job title: ' + ${employee.jobTitle} ">Employee job title"</h4>
+                        <h4 th:text="'Birthdate: ' + ${employee.birthDate} ">"Employee Birthdate"</h4>
+                        <h4 th:text="'Salary: $' + ${employee.salary.intValue()} ">"Employee salary"</h4>
+                        <h4 th:text="'Company: ' + ${employee.company.name} ">"Employee company"</h4>
+                        <form th:action="@{/employees/delete}" method="post">
+                            <input type="hidden" name="id" th:value="${employee.id}" />
+                            <button type="submit" class="btn btn-danger">Delete company</button>
+                        </form>
                     </div>
                     <div class="col-md-6 bg-dark"><img src="/pic/employee.png" height="350px"></div>
                 </div>
