--- a/LinkedOut/src/main/resources/templates/employee-add.html
+++ b/LinkedOut/src/main/resources/templates/employee-add.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>LinkedOut</title>
     <link rel="stylesheet" href="/css/reset-css.css"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/style.css"/>
+
+    <style>
+        .error {
+            color: red; /* Set the text color to red */
+            font-weight: bold; /* Make the text bold */
+        }
+    </style>
+
+
 </head>
 <body>
 
@@ -32,69 +41,89 @@
             <div class="justify-content-center">
                 <h1>Add Employee</h1>
             </div>
-            <form class="m-md-auto w-50 text-center">
+            <form th:action="@{/employees/add}" th:object="${employeeDTO}" method="post"
+                  class="m-md-auto w-50 text-center">
 
                 <div class="form-group">
                     <label for="firstName">First Name</label>
-                    <input type="text" class="form-control text-center" id="firstName" aria-describedby="firstName" name="firstName" />
-                    <small>Error message</small>
+                    <input type="text" th:field="*{firstName}" class="form-control text-center" id="firstName"
+                           aria-describedby="firstName" name="firstName"/>
+                    <small class="error" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName message</small>
+                    <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
+                        <ul>
+                            <li th:each="err : ${#fields.globalErrors()}" th:text="${err}">Error Message</li>
+                        </ul>
+                    </div>
                 </div>
+
 
                 <div class="form-group">
                     <label for="lastName">Last Name</label>
-                    <input type="text" class="form-control text-center" id="lastName" aria-describedby="lastName" name="lastName"/>
-                    <small>Error message</small>
+                    <input type="text" th:field="*{lastName}" class="form-control text-center" id="lastName"
+                           aria-describedby="lastName" name="lastName"/>
+                    <small class="error" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName message</small>
+                    <small class="error" th:if="${#fields.hasGlobalErrors()}" th:text="${err}">Error</small>
                 </div>
                 <fieldset class="form-group">
                     <legend>Choose Education Level</legend>
                     <div class="form-check">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="educationLevel"/>
+                            <input type="radio" th:field="*{educationLevel}" th:value="Master" class="form-check-input"
+                                   name="educationLevel"/>
                             <span>Master</span>
                         </label>
                     </div>
                     <div class="form-check disabled">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input" name="educationLevel"/>
+                            <input type="radio" th:field="*{educationLevel}" th:value="Bachelor"
+                                   class="form-check-input" name="educationLevel"/>
                             <span>Bachelor</span>
                         </label>
                     </div>
                     <div class="form-check disabled">
                         <label class="form-check-label">
-                            <input type="radio" class="form-check-input " name="educationLevel" />
+                            <input type="radio" th:field="*{educationLevel}" th:value="Secondary"
+                                   class="form-check-input " name="educationLevel"/>
                             <span>Secondary</span>
                         </label>
                     </div>
-                    <small>Error message</small>
-					</fieldset>
+                    <small class="error" th:if="${#fields.hasErrors('educationLevel')}" th:errors="*{educationLevel}">EducationLevel message</small>
+                </fieldset>
 
                 <div class="form-group">
                     <label for="company"><h5>All available companies</h5></label>
                     <select multiple="false" class="form-control text-center" id="company" name="company">
-                        <option> First Company name</option>
-                        <option> Second Company name</option>
-                        <option> Third Company name</option>
+                        <option th:each="company : ${companies}"
+                                th:field="*{company}"
+                                th:value="${company.id}"
+                                th:text="${company.name}"
+                        > First Company name
+                        </option>
                     </select>
-                    <small>Error message</small>
-				</div>
+                    <small class="error" th:if="${#fields.hasErrors('company')}" th:errors="*{company}">Company message</small>
+                </div>
 
                 <div class="form-group">
                     <label for="jobTitle">Job Title</label>
-                    <input type="text" class="form-control text-center" id="jobTitle" aria-describedby="jobTitle" name="jobTitle" />
-                    <small>Error message</small>
+                    <input type="text" th:field="*{jobTitle}" class="form-control text-center" id="jobTitle" aria-describedby="jobTitle"
+                           name="jobTitle"/>
+                    <small class="error" th:if="${#fields.hasErrors('jobTitle')}" th:errors="*{jobTitle}">Job title message</small>
                 </div>
 
                 <div class="form-group">
                     <label for="birthDate">Birth Date</label>
-                    <input type="date" class="form-control text-center" id="birthDate" aria-describedby="birthDate" name="birthDate" />
-                    <small>Error message</small>
+                    <input type="date" th:field="*{birthDate}" class="form-control text-center" id="birthDate" aria-describedby="birthDate"
+                           name="birthDate"/>
+                    <small class="error" th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}">BirthDate message</small>
+
                 </div>
 
                 <div class="form-group">
                     <label for="salary">Salary</label>
-                    <input type="number" min="0" class="form-control text-center" id="salary" 
-					aria-describedby="salary" name="salary"/>
-                    <small>Error message</small>
+                    <input type="number"  th:field="*{salary}"  class="form-control text-center" id="salary"
+                           aria-describedby="salary" name="salary"/>
+                    <small class="error" th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}">Salary message</small>
+
                 </div>
 
                 <button type="submit" class="btn btn-secondary">Add Employee</button>
