--- a/SpringBootAndSpringMVC/src/main/resources/templates/index.html
+++ b/SpringBootAndSpringMVC/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org" >
 
 <head>
     <meta charset="UTF-8"/>
