--- a/DictionaryApp/src/main/resources/templates/fragments/commons.html
+++ b/DictionaryApp/src/main/resources/templates/fragments/commons.html
@@ -11,23 +11,23 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-nav rounded " >
+    <nav class="navbar navbar-expand-lg bg-nav rounded ">
         <a class="nav-link my-text-color active h5 " href="/">Dictionary App</a>
-        <a class="nav-link my-text-color active h5  " href="/">Add Word</a>
+        <a th:if="${@userSession.isLoggedIn()}" class="nav-link my-text-color active h5  " href="/word/add">Add Word</a>
 
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav row">
                 <li class="nav-item col-md-4">
-                    <a class="nav-link active h5 my-text-color" href="/">Login</a>
+                    <a th:if="${!@userSession.isLoggedIn()}" class="nav-link active h5 my-text-color" href="/user/login">Login</a>
                 </li>
 
                 <li class="nav-item col-md-4">
-                    <a class="nav-link my-text-color active h5 " href="/">Register</a>
+                    <a th:if="${!@userSession.isLoggedIn()}" class="nav-link my-text-color active h5 " href="/user/register">Register</a>
                 </li>
 
-                    <a class="nav-link h5 my-text-color">Welcome, {username}</a>
+                <a th:if="${@userSession.isLoggedIn()}" th:text="'Welcome, ' + ${@userSession.username}"  class="nav-link h5 my-text-color" >Welcome, User</a>
                 <li class="nav-item col-md-4">
-                    <a class="nav-link my-text-color active h5 " href="/">Logout</a>
+                    <a th:if="${@userSession.isLoggedIn()}" class="nav-link my-text-color active h5 " href="/user/logout">Logout</a>
                 </li>
             </ul>
         </div>
