--- a/BonAppetit/src/main/resources/templates/fragments/commons.html
+++ b/BonAppetit/src/main/resources/templates/fragments/commons.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,22 +13,29 @@
 </head>
 <body>
 <header>
+
+
     <nav class="navbar navbar-expand-lg bg-nav rounded">
-        <a class="nav-link text-primary active h5 text-stroke" href="/">Bon App-étit</a>
-        <a class="nav-link text-primary active h5 text-stroke" href="/">Add Recipe</a>
+
+        <a class="nav-link text-primary active h5 text-stroke" th:href="@{/}">Bon App-étit</a>
+        <a sec:authorize="isAuthenticated()" class="nav-link text-primary active h5 text-stroke"
+           th:href="@{/recipe/add}">Add Recipe</a>
 
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav row">
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" href="/">Login</a>
+                <li sec:authorize="!isAuthenticated()" class="nav-item col-md-4">
+                    <a  class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/login}">Login</a>
                 </li>
 
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" href="/">Register</a>
+                <li sec:authorize="!isAuthenticated()" class="nav-item col-md-4">
+                    <a  class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/register}">Register</a>
                 </li>
 
-                <li class="nav-item col-md-4">
-                    <a class="nav-link text-primary active h5 text-stroke" href="/">Logout</a>
+                <li sec:authorize="isAuthenticated()" class="nav-item col-md-4">
+                    <a  class="nav-link text-primary active h5 text-stroke"
+                       th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
         </div>
