--- a/BonAppetit/src/main/resources/templates/home.html
+++ b/BonAppetit/src/main/resources/templates/home.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head"></head>
+<head th:replace="~{fragments/commons::head}"></head>
 <body>
-<header th:replace="fragments/commons::nav"></header>
+<header th:replace="~{fragments/commons::nav}"></header>
 <main>
     <div class="container bg-blur rounded mt-1 mb-4">
-        <h6 class="bg-gray text-dark mb-0 mt-0">Welcome, {username}</h6>
+        <h6 class="bg-gray text-dark mb-0 mt-0">Welcome, <span th:text="${username}">Username</span></h6>
         <div class="row mt-1 mb-2">
             <div class="col-6 mt-1 mb-1">
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Desserts ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Desserts (<span
+                            th:text="${#lists.size(desserts)}"></span>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
-                        <table class="table table-striped table-dark">
+                        <table th:each="dessert : ${desserts}" class="table table-striped table-dark">
                             <tr>
                                 <td class="bg-warning" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/dessert.png" alt="Dessert" width="35px" height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Dessert" width="35px" height="35px"></a></td>
+
+                                <td   th:text="${dessert.name.length() > 15 ? #strings.substring(dessert.name, 0, 15) + '...' : dessert.name}"></td>
+                                <td   th:text="${dessert.ingredients.length() > 25 ? #strings.substring(dessert.ingredients, 0, 25) + '...' : dessert.ingredients}"></td>
+                                <td>
+                                    <form th:if="${!#lists.contains(favourites, dessert)}"
+                                          th:action="@{/recipe/add-to-favorites/{recipeId}(recipeId=${dessert.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/add-to-favourites.png" alt="Add to Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
+                                    <form th:if="${#lists.contains(favourites, dessert)}"
+                                          th:action="@{/recipe/remove-from-favorites/{recipeId}(recipeId=${dessert.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/remove-from-favourites.png" alt="Remove from Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
                                 </td>
                             </tr>
                         </table>
@@ -28,17 +44,33 @@
                 </div>
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Cocktails ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Cocktails (<span
+                            th:text="${#lists.size(cocktails)}"></span>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
-                        <table class="table table-striped table-dark">
+                        <table th:each="cocktail : ${cocktails}" class="table table-striped table-dark">
                             <tr>
                                 <td class="bg-success" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/cocktail.png" alt="Cocktail" width="35px"
                                          height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Cocktail" width="35px" height="35px"></a></td>
+                                <td th:text="${cocktail.name.length() > 15 ? #strings.substring(cocktail.name, 0, 15) + '...' : cocktail.name}"></td>
+                                <td th:text="${cocktail.ingredients.length() > 25 ? #strings.substring(cocktail.ingredients, 0, 25) + '...' : cocktail.ingredients}"></td>
+                                <td >
+                                    <form th:if="${!#lists.contains(favourites, cocktail)}"
+                                          th:action="@{/recipe/add-to-favorites/{recipeId}(recipeId=${cocktail.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/add-to-favourites.png" alt="Add to Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
+                                    <form th:if="${#lists.contains(favourites, cocktail)}"
+                                          th:action="@{/recipe/remove-from-favorites/{recipeId}(recipeId=${cocktail.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/remove-from-favourites.png" alt="Remove from Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -47,31 +79,50 @@
 
             <div class="col-6 mt-1 mb-1">
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Main Dishes ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Main Dishes (<span
+                            th:text="${#lists.size(mainDishes)}"></span>)</h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
-                        <table class="table table-striped table-dark">
+                        <table th:each="main : ${mainDishes}" class="table table-striped table-dark">
                             <tr>
                                 <td class="bg-info" scope="row" style="width: 5%">
-                                    <img class="mr-2 " src="/img/main-dish.png" alt="Main-Dish" width="35px" height="35px">
+                                    <img class="mr-2 " src="/img/main-dish.png" alt="Main-Dish" width="35px"
+                                         height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
-                                <td><a href="/"><img class="mr-2 " src="/img/add-to-favourites.png" alt="Main-Dish" width="35px" height="35px"></a></td>
+                                <td th:text="${main.name.length() > 15 ? #strings.substring(main.name, 0, 15) + '...' : main.name}"></td>
+                                <td th:text="${main.ingredients.length() > 25 ? #strings.substring(main.ingredients, 0, 25) + '...' : main.ingredients}"></td>
+                                <td>
+                                    <form th:if="${!#lists.contains(favourites, main)}"
+                                          th:action="@{/recipe/add-to-favorites/{recipeId}(recipeId=${main.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/add-to-favourites.png" alt="Add to Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
+                                    <form th:if="${#lists.contains(favourites, main)}"
+                                          th:action="@{/recipe/remove-from-favorites/{recipeId}(recipeId=${main.id})}" method="POST">
+                                        <button type="submit" class="btn btn-link">
+                                            <img src="/img/remove-from-favourites.png" alt="Remove from Favorites" width="35px"
+                                                 height="35px">
+                                        </button>
+                                    </form>
+                                </td>
                             </tr>
                         </table>
                     </div>
                 </div>
 
                 <div>
-                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">Favourites ({count})</h3>
+                    <h3 class="mySticky bg-gray text-dark  mb-0 mt-2">
+                        Favourites <span th:if="${#lists.size(favourites) > 0}">
+                        (<span th:text="${#lists.size(favourites)}"></span>)</span></h3>
                     <div class="bg-dark rounded m-auto" style="height: 31vh; overflow: auto">
-                        <table class="table table-striped table-dark">
+                        <table th:each="favourite : ${favourites}" class="table table-striped table-dark">
                             <tr>
                                 <td class="bg-primary" scope="row" style="width: 5%">
                                     <img class="mr-2 " src="/img/star.png" alt="Star" width="35px" height="35px">
                                 </td>
-                                <td>{name}</td>
-                                <td>{ingredients}</td>
+                                <td th:text="${favourite.name.length() > 15 ? #strings.substring(favourite.name, 0, 15) + '...' : favourite.name}"></td>
+                                <td th:text="${favourite.ingredients.length() > 25 ? #strings.substring(favourite.ingredients, 0, 25) + '...' : favourite.ingredients}"></td>
                             </tr>
                         </table>
                     </div>
@@ -80,6 +131,6 @@
         </div>
     </div>
 </main>
-<footer th:replace="fragments/commons::footer"></footer>
+<footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
 </html>
