--- a/BonAppetit/src/main/resources/templates/recipe-add.html
+++ b/BonAppetit/src/main/resources/templates/recipe-add.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/commons::head"></head>
+<head th:replace="~{fragments/commons::head}"></head>
 <body>
-<header th:replace="fragments/commons::nav"></header>
+<header th:replace="~{fragments/commons::nav}"></header>
 <main>
     <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add recipe</span></h1>
     <hr class="hr-3 w-25 bg-white"/>
 
-    <form class="mx-auto w-25 bg-blur rounded" method="" action="/">
+    <form class="mx-auto w-25 bg-blur rounded"
+          th:action="@{/recipe/add}"
+          th:method="POST"
+          th:object="${addRecipeDTO}"
+    >
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="name" class="h4 mb-2">Name</label>
             </div>
-            <textarea type="text" class="form-control" id="name" name="name"></textarea>
-            <small class="text-danger">Name error message</small>
+            <textarea type="text" th:field="*{name}" class="form-control" id="name" name="name"></textarea>
+            <!--        <div th:each="error: ${#fields.errors()}" th:text="${error}" class="text-danger">Error messrgrdgages</div>-->
+
+            <small
+                    th:if="${#fields.hasErrors('name')}"
+                    th:errors="*{name}"
+
+                    class="text-danger"
+
+            >Name error message</small>
         </div>
 
         <div class="form-group">
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="ingredients" class="h4 mb-2">Ingredients</label>
             </div>
-            <textarea type="text" class="form-control" id="ingredients" name="ingredients"></textarea>
-            <small class="text-danger">Ingredients error message</small>
+            <textarea type="text" th:field="*{ingredients}"  class="form-control" id="ingredients"></textarea>
+            <small
+                    th:if="${#fields.hasErrors('ingredients')}"
+                    th:errors="*{ingredients}"
+
+                    class="text-danger"
+
+
+            >Ingredients error message</small>
         </div>
 
         <div class="form-group">
             <div class="text-white label-holder d-flex justify-content-center">
                 <label for="category" class="h4 mb-2">Category</label>
             </div>
-            <select class="browser-default custom-select" id="category" name="category">
-                <option value="">Select category</option>
-                <option value="MAIN_DISH">Main Dish</option>
-                <option value="DESSERT">Dessert</option>
-                <option value="COCKTAIL">Cocktail</option>
+            <select th:field="*{category}" class="browser-default custom-select" id="category">
+                <option value="" >Select category</option>
+                <option th:each="category : ${categories}"
+                        th:value="${category.id}"
+                        th:text="${category.name}"></option>
             </select>
 
-            <small class="text-danger">Category error message</small>
+            <small th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger">Category error message</small>
         </div>
 
         <div class="button-holder d-flex justify-content-center">
@@ -46,6 +65,6 @@
 
     </form>
 </main>
-<footer th:replace="fragments/commons::footer"></footer>
+<footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
 </html>
